<resources>
    <string name="app_name">Dialogs</string>
    <string name="demo_alert_title">Alert dialog</string>
    <string name="demo_custom_title">Custom dialog</string>
    <string name="demo_custom_extended_title">Custom extended dialog</string>
    <string name="demo_loading_title">Loading dialog</string>
    <string name="demo_adapter_title">Adapter picker dialog</string>
    <string name="demo_color_title">Color picker dialog</string>
    <string name="demo_icon_title">Icon picker dialog</string>
    <string name="demo_date_range_title">Date range picker dialog</string>
    <string name="demo_date_time_title">Date&amp;time picker dialog</string>
    <string name="demo_month_title">Month picker dialog</string>
    <string name="demo_time_title">Time picker dialog</string>
    <string name="demo_chips_title">Chips picker dialog</string>

    <string name="demo_dialog_title_option_text">Title</string>
    <string name="demo_dialog_message_option_text">Message</string>
    <string name="demo_dialog_positive_button_option_text">Positive button</string>
    <string name="demo_dialog_negative_button_option_text">Negative button</string>
    <string name="demo_dialog_type_option_text">DIALOG TYPE</string>
    <string name="demo_dialog_animation_type_option_text">DIALOG ANIMATION</string>
    <string name="demo_dialog_other_options_text">OTHER</string>
    <string name="demo_dialog_cancelable_option_text">CANCELABLE</string>
    <string name="demo_dialog_filterable_option_text">FILTERABLE</string>
    <string name="demo_dialog_allow_new_items_option_text">ALLOW ITEM CREATION</string>
    <string name="demo_dialog_show_button_text">SHOW DIALOG</string>
    <string name="demo_dialog_default_title_text">Demo dialog title</string>
    <string name="demo_dialog_default_message_text">Demo dialog message</string>
    <string name="demo_dialog_default_positive_button">OK</string>
    <string name="demo_dialog_default_negative_button">CLOSE</string>

    <string name="demo_positive_button_clicked_text">Positive button clicked</string>
    <string name="demo_negative_button_clicked_text">Negative button clicked</string>
    <string name="demo_selection_changed_text">Selection changed</string>
    <string name="demo_action_completed_text">Action completed</string>
    <string name="demo_dialog_animation_must_be_bottomsheet_text">Invalid animation. Animation switched to TRANSITION_FROM_BOTTOM_TO_BOTTOM.</string>
</resources>